--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 </article>
             </section>xem
         </main>
+        <!-- đường thẳng ngang -->
         <hr class="bottom-line">
         <footer>
             <p><a href="https://www.freecodecamp.org">Visit our website</a></p>
